2004-07-09  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/beam.scm (check-slope-callbacks): check sign of slope. 

	* input/regression/beam-concave.ly (rossFourBeams): add cases from Ross

	* scm/script.scm (default-script-alist): marcato should follow
	into staff
	
2004-07-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/builder.py:
	
	* Documentation/SConscript (outdir): New file.  Add *list.ly
	dependencies.  Fixes PDF doc build.

2004-07-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* SConstruct: Add Tar target (incomplete), fix install issues, fix
	run from build-dir.

	* ly/SConscript:
	* scm/SConscript: New file.

	* lily/main.cc (dir_info): Print variables in sh format.

	* lily/includable-lexer.cc: Use #if iso #ifdef for HAVE_ tests.

	* mf/SConscript: Update multiple target rules.

	* SConstruct (assert_version): Add.

2004-07-08  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* SConstruct (key): add HAVE_FLEXLEXER_YY_CURRENT_BUFFER check.

2004-07-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/mf-to-table.py: Do not try to open ''.

	* mf/SConscript: New file.

2004-07-06  Carl Sorensen  <carldsorensen@comcast.net>

	* scm/fret-diagrams.scm : Convert many properties to constants,
	reducing the pollution of the property namespace.

	* scm/define-grob-properties.scm (all-user-grob-properties): Reduce
	unnecessary properties for fret-diagram

	* scm/define-grob-interfaces.scm (fret-diagram-interface): Add symbols
	for interface

2004-07-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* SConstruct: Update.

2004-07-07  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/regression/beam-quant-standard.ly (seconds): print desired
	quants when failing.

2004-07-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* SConstruct:
	* flower/SConscript:
	* lily/SConscript: New file.

2004-07-05  Carl Sorensen  <carldsorensen@comcast.net>

	* scm/define-grob-properties.scm (all-user-grob-properties): Add
	descriptions for all fret-diagram properties.
